[metadata]
name = txagent
version = 0.1.2
description = TxAgent: An AI Agent for Therapeutic Reasoning Across a Universe of Tools
author = Shanghua Gao
author_email = shanghuagao@gmail.com
url = https://github.com/mims-harvard/TxAgent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    gradio
    vllm
    sentence_transformers

[options.packages.find]
where = src
